--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 1rem 0;
+    padding: 0.4rem 0; 
     text-align: center;
+}
+
+header h1 {
+    font-size: 1.2rem; 
+    margin: 0;        
+    line-height: 1.2; 
 }
 
 .container {
